--- a/Development/Front/home.html
+++ b/Development/Front/home.html
@@ -61,7 +61,7 @@
     <div class="carousel slide" data-bs-ride="carousel" id="carousel-1" style="height: 700;">
         <div class="carousel-inner" style="height: 700;">
             <div class="carousel-item active" style="filter: blur(0px) sepia(0%);"><a id="link-slider" href="https://google.com">
-                    <h1 class="text-center d-block" id="header-slider-text">Ремонт автомобілів</h1><img class="img-fluid image-dark-filter" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/2019_Tesla_Model_3%2C_Front_Left%2C_05-30-2021.jpg/1200px-2019_Tesla_Model_3%2C_Front_Left%2C_05-30-2021.jpg" alt="Slide Image" loading="auto" style="width: 100%;">
+                    <h1 class="text-center d-block" id="header-slider-text" style="color: rgb(255,255,255);">Ремонт автомобілів</h1><img class="img-fluid image-dark-filter" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/2019_Tesla_Model_3%2C_Front_Left%2C_05-30-2021.jpg/1200px-2019_Tesla_Model_3%2C_Front_Left%2C_05-30-2021.jpg" alt="Slide Image" loading="auto" style="width: 100%;">
                 </a></div>
         </div>
         <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
@@ -122,10 +122,18 @@
                 <h2 class="text-center" id="Service-section">Послуги</h2>
                 <p class="text-center">Якщо не знайшли потрібного, чекаємо вашого звернення у формі для зв'язку.</p>
             </div>
-            <div class="row photos" data-bss-baguettebox="">
-                <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="https://google.com">
-                        <h1 id="service-image-text" style="font-size: 21px;color: rgb(255,204,30);">Заміна мастил</h1><img class="img-fluid" src="assets/img/desk.jpg">
-                    </a></div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="card" style="margin-bottom: 10px;">
+                        <div class="card-body card-product-home" style="cursor: pointer; cursor: hand;" onclick="window.location=&#39;/&#39;;"><img src="assets/img/loft.jpg" width="100%">
+                            <h1 style="font-size: 22px;color: rgb(255,204,30);">Заміна двигуна</h1>
+                            <p>Якісний двигун це сила</p>
+                            <p style="font-size: 14px;text-align: right;">Ціна від 1000$</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col">
