--- a/Development/Front/home.html
+++ b/Development/Front/home.html
@@ -51,7 +51,7 @@
                     <li class="nav-item"><a class="nav-link" href="home.html#Info-section" style="border-color: var(--bs-body-color);filter: blur(0px);">Переваги</a></li>
                     <li class="nav-item"><a class="nav-link" href="home.html#Service-section" style="border-color: var(--bs-body-color);filter: blur(0px);">Послуги</a></li>
                     <li class="nav-item"><a class="nav-link" href="home.html#Contacts-section" style="border-color: var(--bs-body-color);filter: blur(0px);">Контакти</a></li>
-                    <li class="nav-item"><a class="nav-link" href="home.html#Contacts-section" style="border-color: var(--bs-body-color);filter: blur(0px);">Працівники</a></li>
+                    <li class="nav-item"><a class="nav-link" href="home.html#Team-section" style="border-color: var(--bs-body-color);filter: blur(0px);">Працівники</a></li>
                     <li class="nav-item"><a class="nav-link" href="home.html#Partners-section" style="border-color: var(--bs-body-color);filter: blur(0px);">Партнери</a></li>
                     <li class="nav-item"><a class="nav-link" href="home.html#Reviews-section" style="border-color: var(--bs-body-color);filter: blur(0px);">Відгуки</a></li>
                 </ul><span class="navbar-text actions" style="color: var(--bs-blue);"> <a id="navbar-register" class="login" href="#">Реєстрація</a><a class="btn btn-light action-button" role="button" id="navbar-spun-buton" href="#">Вхід</a></span><span class="navbar-text actions" style="color: var(--bs-blue);"> <a class="btn btn-light action-button" role="button" id="navbar-spun-buton" href="#">Особистий кабінет</a></span>
@@ -166,7 +166,7 @@
             </div>
         </div>
     </div>
-    <section class="newsletter-subscribe" style="background: rgb(33,37,41);">
+    <section id="Date-works" class="newsletter-subscribe" style="background: rgb(33,37,41);">
         <div class="container">
             <div class="intro">
                 <h2 class="text-center" style="color: var(--bs-body-bg);">Перевірити вільні години</h2>
@@ -206,7 +206,7 @@
             </div>
         </div>
     </section>
-    <section class="team-clean" style="background: rgb(255, 255, 255);">
+    <section id="Team-section" class="team-clean" style="background: rgb(255, 255, 255);">
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Працівники</h2>
@@ -277,15 +277,6 @@
                         <li><a href="home.html#Partners-section">Партнери</a></li>
                         <li><a href="home.html#Reviews-section">Відгуки</a></li>
                     </ul>
-                </div>
-                <div class="col-sm-6 col-md-3 item">
-                    <h3>Мова</h3>
-                    <div>
-                        <ul>
-                            <li><a href="#">UA</a></li>
-                            <li><a href="#">ENG<br></a><a href="#"></a></li>
-                        </ul>
-                    </div>
                 </div>
                 <div class="col-md-6 item text">
                     <h3>СТО</h3>
