--- a/Development/Front/advertisement-action.html
+++ b/Development/Front/advertisement-action.html
@@ -65,7 +65,7 @@
                     <hr>
                     <div class="card">
                         <div class="card-body"><a class="card-link" id="link-slider" href="https://google.com">
-                                <h1 class="text-center d-block" id="header-slider-text">Ремонт автомобілів</h1><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/2019_Tesla_Model_3%2C_Front_Left%2C_05-30-2021.jpg/1200px-2019_Tesla_Model_3%2C_Front_Left%2C_05-30-2021.jpg" width="100%">
+                                <h1 class="text-center d-block" id="header-slider-text" style="color: rgb(255,255,255);">Ремонт автомобілів</h1><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/2019_Tesla_Model_3%2C_Front_Left%2C_05-30-2021.jpg/1200px-2019_Tesla_Model_3%2C_Front_Left%2C_05-30-2021.jpg" width="100%">
                             </a>
                             <hr>
                             <p class="card-text" style="margin-left: 22px;margin-right: 22px;font-size: 20px;">Message</p>
@@ -137,15 +137,6 @@
                         <li><a href="home.html#Partners-section">Партнери</a></li>
                         <li><a href="home.html#Reviews-section">Відгуки</a></li>
                     </ul>
-                </div>
-                <div class="col-sm-6 col-md-3 item">
-                    <h3>Мова</h3>
-                    <div>
-                        <ul>
-                            <li><a href="#">UA</a></li>
-                            <li><a href="#">ENG<br></a><a href="#"></a></li>
-                        </ul>
-                    </div>
                 </div>
                 <div class="col-md-6 item text">
                     <h3>СТО</h3>
